--- a/CSS-portfolio/css/style.css
+++ b/CSS-portfolio/css/style.css
@@ -1,1 +1,286 @@
+:root {
+  --black: #171321;
+  --dkblue: #0d314b;
+  --plum: #4b0d49;
+  --hotmag: #ff17e4;
+  --magenta: #e310cb;
+  --aqua: #86fbfb;
+  --white: #f7f8fa;
+  --font-size: 1.3rem;
+  --mono: "Oxygen mono", monospace;
+  --sans: Oxygen, sans-serif;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: var(--sans);
+  background-color: var(--black);
+  color: var(--white);
+  font-size: var(--font-size);
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+
+img {
+    width: 100%;
+}
+
+a {
+  color: var(--magenta);
+}
+
+a:hover {
+  color: var(--hotmag);
+  text-decoration: none;
+}
+
+/* Navigation Section */
+
+.nav-bar {
+  font-family: var(--mono);
+  padding: 3rem 1rem;
+  font-size: 80%;
+}
+
+.nav-bar h1 a {
+  font-family: var(--sans);
+}
+
+.nav-bar ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+.nav-bar li:first-child {
+  flex-basis: 100%;
+  text-align: center;
+}
+
+.nav-bar [class*="fa-"] {
+    font-size: 150%;
+    color: var(--aqua);
+}
+
+.nav-bar a {
+    text-decoration: none;
+    color: var(--white);
+    display: block; 
+}
+.nav-bar a:hover,
+.nav-bar [class*="fa-"]:hover {
+    color: var(--magenta);
+}
+
+@media (min-width: 850px) {
+    .nav-bar {
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+
+    .nav-bar li:first-child {
+        flex-basis: auto;
+        text-align: left;
+        margin-right: auto;
+    }
+}
+
+/* Intro Section */
+.intro {
+  padding: 4rem 1rem 10rem 1rem;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.intro p {
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+.intro .name {
+  font-family: var(--mono);
+}
+
+.name span {
+  font-family: var(--sans);
+  font-size: 4rem;
+  color: var(--aqua);
+  display: block;
+  font-weight: 300;
+}
+
+.intro h2 {
+  font-size: 3rem;
+}
+
+.gradient{
+    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(215,29,253,0.8953781341638218) 0%, rgba(252,245,69,0.7413165095139618) 100%);
+    height: 2px;
+}
+
+/* Projects Section */
+
+.section-dkblue{
+    background-color: var(--dkblue);
+}
+
+.projects{
+    padding: 4rem 1rem;
+}
+
+.projects h2 {
+    font-size: 2.5rem;
+    margin-bottom: calc(2.5rem * 1.5);
+}
+.projects h3 {
+    color: var(--aqua);
+}
+
+.projects h4 {
+  font-size: 1rem;
+  font-family: var(--mono);
+  margin: 0;
+}
+.box-black {
+    padding: 1rem;
+    border-radius: 10px;
+    color: white;
+    background-color: var(--black);
+    font-size: 1rem;
+    line-height: 1.5;
+}
+.projects ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    gap: 1rem;
+    font-size: 1rem;
+}
+
+.projects img {
+    margin: 2rem 0 4rem 0;
+    padding: 1rem;
+    border-left: 1px solid var(--aqua);
+    border-top: 1px solid var(--aqua);
+    border-radius: 25px;
+}
+
+@media (min-width:550px){
+    article {
+        display: grid;
+        grid-template-columns: repeat(10, 1fr);
+        grid-gap: 3rem
+    }
+
+    .projects {
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+
+    .projects img {
+        grid-column: 1/6;
+        grid-row: 1/2;
+    }
+
+    .text {
+        grid-column: 5/11;
+        grid-row: 1/2;
+        order: 2;
+        text-align: right;
+    }
+    .projects ul {
+        justify-content: flex-end;
+    }
+
+    .projects .reverse .text {
+        grid-column: 1/7;
+        order: 2;
+        text-align: left;
+    }
+    .projects .reverse img {
+        grid-column: 6/11;
+        grid-row: 1/2;
+    }
+    .projects .reverse ul {
+        justify-content: flex-start;
+    }
+}
+
+/* Contact Section */
+
+.contact {
+  background-color: var(--plum);
+  margin: 0 auto;
+  padding: 3rem 0;
+  text-align: center;
+}
+
+.contact p:last-child {
+  margin-top: 3rem;
+  font-size: 1.2rem;
+}
+
+.contact p a {
+  color: var(--white);
+  text-decoration: none;
+  font-family: var(--mono);
+}
+
+.button {
+  background-color: var(--magenta);
+  border-radius: 5px;
+  padding: 0.5rem;
+  color: var(--white);
+}
+
+.nav-bar .button:hover,
+.button:hover{
+  color: var(--white);
+  background-color: var(--hotmag);
+}
+
+/* Footer Section*/
+
+.footer {
+  text-align: center;
+  padding: 4rem;
+}
+
+.footer ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  margin: 2rem 0;
+  flex-flow: row wrap;
+  padding: 0;
+  font-size: 3rem;
+}
+
+.footer [class*="fa-"] {
+  color: var(--magenta);
+}
+
+.footer [class*="fa-"]:hover {
+  color: var(--hotmag);
+}
+
 
