--- a/calculator-project/css/style.css
+++ b/calculator-project/css/style.css
@@ -1,1 +1,65 @@
+*, *::after, *::before{
+    box-sizing: border-box;
+    font-family: Courier, monospace, sans-serif;
+    font-weight: normal !important;
+}
+
+body{
+    padding:0;
+    margin: 0;
+    background: linear-gradient(to right, cyan,orange, yellow);
+}
+
+.calculator{
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    min-height: 100vh;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: minmax(100px, auto) repeat(5, 80px);
+}
+
+.calculator > button{
+    cursor: pointer;
+    font-size: 1.5rem;
+    border: 1px solid white;
+    border-radius: 3px;
+    outline:none;
+    background-color: rgba(255, 255, 255, .75);
+    opacity: 95%;
+}
+
+.calculator > button:hover{
+    background-color: rgba(255, 255, 255, .90);
+}
+
+.span-two{
+    grid-column: span 2;
+}
+
+.span-three{
+    grid-column: span 3;
+}
+
+.output{
+    grid-column: 1 / -1;
+    background-color: rgba(0, 0, 0, .75);
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    flex-direction: column;
+    padding: 10px;
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
+.output .previous-op-output{
+    color: rgba(255, 255, 255, .85);
+    font-size: 1.5rem;
+}
+.output .present-op-output{
+    color: white;
+    font-size: 2.5rem;
+}
+
 
